# mfe_course

./: .gitattributes  README.md
quarter1/Accounting 401/: Session 3.pptx
quarter1/Accounting 401/case 1/: Case1_solution_huanyu.docx  Case1_solution_huanyu_graded.docx
quarter1/Accounting 401/case 2/: Case 2_Huanyu.docx
quarter1/Accounting 401/case 3/: Case 3_Huanyu_Liu.docx
quarter1/Accounting 401/case 4/: Case 4.docx
quarter1/Accounting 401/case 5/: Case 5.docx
quarter1/Accounting 401/case 6/: Case 6.docx  Ethan_Allen_Assumptions 07_08.xlsx  Ethan_Allen_historical_FS_11_10.xlsx  Netflix solution 07_04.xlsx  ~$Case 6.docx
quarter1/Accounting 401/case 7/: 309658e2e475f980.csv  COC template - CAPM and FF.xlsx  Case 7.docx  ETH.csv  Ethan_Allen_raw.csv  F-F_Research_Data_Factors_daily-2.CSV  F-F_Research_Data_Factors_daily.CSV  eth2.csv  (+3 more)
quarter1/Econometrics 402/: Ch I code snippets.R  Ch II code snippets.R
quarter1/Investment 400/: feds200628.xls  hw4_huanyu.R
quarter2/ComputationalFinance/Code/Project4b/Project4b/: CMakeLists.txt  option.cpp
quarter2/ComputationalFinance/Code/Project5/Project5/: CMakeLists.txt  laguerre.cpp  laguerre.h  main  main.cpp  matrix_cal.cpp  option.cpp  option.h  random_generator.cpp  stats.cpp
quarter2/CorporateFinance404/: bookhw_huanyu.docx  template.Rhtml
quarter2/Derivatives/: FuturesSwaps.xlsx
quarter2/presentation/: final_script.docx  presentation.pptx  presentation_huanyu.pptx  script.docx
quarter3/QuantitativeAssetManagement/: PS1_905234532.py  PS3_905234532.py
quarter3/RiskManagement/: cheatsheetdocx.docx
(+414 files in other folders)
